srcMyCoreApp/main/default/objects/Travel__c/Travel__c.object-meta.xml
<CustomObject>
    <label>Travel</label>
    <nameField>
        <label>Travel Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Travel</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>