srcMyCoreApp/main/default/objects/Travel__c/fields/Travel_Purpose__c.field-meta.xml
<CustomField>
    <fullName>Travel_Purpose__c</fullName>
    <label>Travel Purpose</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Business</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>Conference</fullName>
            </value>
            <value>
                <fullName>Customer Visit</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>